--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -41,14 +41,9 @@
 </p>
 
 <p>
-  <strong>Progress:</strong>
-  <%= @task.progress %>
-</p>
-
-<p>
   <strong>Status:</strong>
   <%= @task.status %>
 </p>
 
-<%= link_to 'Edit', edit_task_path(@task) %> |
-<%= link_to 'Back', tasks_path %>
+<%= link_to 'Edit', edit_project_task_path(@project, @task) %> |
+<%= link_to 'Back', project_tasks_path %>
