--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,10 +1,15 @@
 <h1>Listing projects</h1>
 
+<p>
+  <%= link_to 'New Project', new_project_path %>
+</p>
+
 <table>
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
+      <th></th>
       <th></th>
       <th></th>
       <th></th>
@@ -19,11 +24,12 @@
         <td><%= link_to 'Show', project %></td>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Tasks', project_tasks_path(project) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Project', new_project_path %>
+<p>
+  <%= link_to 'Back to Home', root_path %>
+</p>
