--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@task) do |f| %>
+<%= form_for([@project, @task]) do |f| %>
   <% if @task.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
@@ -21,11 +21,11 @@
   </div>
   <div class="field">
     <%= f.label :project %><br>
-    <%= f.select :project_id, Project.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'None'} %>
+    <%= f.select :project_id, Project.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'None'}, disabled: :true %>
   </div>
   <div class="field">
     <%= f.label :priority %><br>
-    <%= f.select :priority, options_for_select(Task::PRIORITY_DOMAIN) %>
+    <%= f.select :priority, options_for_select(Task::PRIORITY_DOMAIN, @task.priority) %>
   </div>
   <div class="field">
     <%= f.label :notes %><br>
@@ -44,12 +44,8 @@
     <%= f.date_select :due_date, include_blank: true %>
   </div>
   <div class="field">
-    <%= f.label :progress, 'Progress (%)' %><br>
-    <%= f.select :progress, options_for_select((0..100).step(10), @task.progress) %>
-  </div>
-  <div class="field">
     <%= f.label :status %><br>
-    <%= f.text_field :status, disabled: true %>
+    <%= f.select :status, options_for_select(Task::STATUS_DOMAIN, @task.status) %>
   </div>
   <div class="actions">
     <%= f.submit %>
