--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing task</h1>
+<h1>Editing <%= "\"#{@project.name}\" project" %> task</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @task %> |
-<%= link_to 'Back', tasks_path %>
+<%= link_to 'Show', [@project, @task] %> |
+<%= link_to 'Back', project_tasks_path %>
