--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New task</h1>
+<h1>New <%= "\"#{@project.name}\" project" %> task</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', tasks_path %>
+<%= link_to 'Back', project_tasks_path %>
