--- a/app/views/tasks/main.erb
+++ b/app/views/tasks/main.erb
@@ -7,6 +7,7 @@
       <th>Project</th>
       <th>Name</th>
       <th>Programmer</th>
+      <th>Kind</th>
       <th>Priority</th>
       <th>Notes</th>
       <th>Budget</th>
@@ -23,6 +24,7 @@
         <td><%= task.project ? task.project.name : '*pending' %></td>
         <td><%= task.name %></td>
         <td><%= task.programmer %></td>
+        <td><%= task.kind %></td>
         <td><%= task.priority %></td>
         <td><%= task.notes %></td>
         <td><%= task.budget %></td>
