--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Kind:</strong>
+  <%= @task.kind %>
+</p>
+
+<p>
   <strong>Project:</strong>
   <%= @task.project.name %>
 </p>
