--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -9,6 +9,7 @@
     <tr>
       <th>Name</th>
       <th>Programmer</th>
+      <th>Kind</th>
       <th>Priority</th>
       <th>Notes</th>
       <th>Budget</th>
@@ -26,6 +27,7 @@
       <tr>
         <td><%= task.name %></td>
         <td><%= task.programmer %></td>
+        <td><%= task.kind %></td>
         <td><%= task.priority %></td>
         <td><%= task.notes %></td>
         <td><%= task.budget %></td>
