--- a/app/views/tasks/main.erb
+++ b/app/views/tasks/main.erb
@@ -25,7 +25,7 @@
     <% @tasks.each do |task| %>
       <tr>
         <td><%= task.created_at %></td>
-        <td><%= task.project ? task.project.name : '*pending' %></td>
+        <td><%= task.project_name %></td>
         <td><%= task.name %></td>
         <td><%= task.programmer %></td>
         <td><%= task.kind %></td>
