--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New <%= "\"#{@project.name}\" project" %> task</h1>
 
-<%= render 'form' %>
+<%= render 'form', project: @project, task: @task %>
 
 <%= link_to 'Back', project_tasks_path %>
