--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,57 +1,58 @@
-<%= form_for([project, task]) do |f| %>
-  <% if task.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being saved:</h2>
+<div class="form">
+  <%= form_for([project, task]) do |f| %>
+    <% if task.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being saved:</h2>
 
-      <ul>
-      <% task.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% task.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+    <div class="field">
+      <%= f.label :name, class: "label" %><br>
+      <%= f.text_field :name, class: "input-xxlarge" %>
+    </div>
+    <div class="field">
+      <%= f.label :programmer, class: "label" %><br>
+      <%= f.text_field :programmer, class: "input-xxlarge" %>
+    </div>
+    <div class="field">
+      <%= f.label :kind, class: "label" %><br>
+      <%= f.select :kind, options_for_select(Task::KIND_DOMAIN, task.kind), include_blank: true %>
+    </div>
+    <div class="field">
+      <%= f.label :project, class: "label" %><br>
+      <%= f.select :project_id, Project.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'None'}, disabled: :true %>
+    </div>
+    <div class="field">
+      <%= f.label :priority, class: "label" %><br>
+      <%= f.select :priority, options_for_select(Task::PRIORITY_DOMAIN, task.priority) %>
+    </div>
+    <div class="field">
+      <%= f.label :notes, class: "label" %><br>
+      <%= f.text_area :notes, class: "input-xxlarge" %>
+    </div>
+    <div class="field">
+      <%= f.label :budget, class: "label" %><br>
+      <%= f.text_field :budget %>
+    </div>
+    <div class="field">
+      <%= f.label :start_date, class: "label" %><br>
+      <%= f.date_select :start_date, include_blank: true %>
+    </div>
+    <div class="field">
+      <%= f.label :due_date, class: "label" %><br>
+      <%= f.date_select :due_date, include_blank: true %>
+    </div>
+    <div class="field">
+      <%= f.label :status, class: "label" %><br>
+      <%= f.select :status, options_for_select(Task::STATUS_DOMAIN, task.status) %>
+    </div>
+    <div class="actions">
+      <%= f.submit class: "btn-primary" %>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :programmer %><br>
-    <%= f.text_field :programmer %>
-  </div>
-  <div class="field">
-    <%= f.label :kind %><br>
-    <%= f.select :kind, options_for_select(Task::KIND_DOMAIN, task.kind), include_blank: true %>
-  </div>
-  <div class="field">
-    <%= f.label :project %><br>
-    <%= f.select :project_id, Project.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'None'}, disabled: :true %>
-  </div>
-  <div class="field">
-    <%= f.label :priority %><br>
-    <%= f.select :priority, options_for_select(Task::PRIORITY_DOMAIN, task.priority) %>
-  </div>
-  <div class="field">
-    <%= f.label :notes %><br>
-    <%= f.text_area :notes %>
-  </div>
-  <div class="field">
-    <%= f.label :budget %><br>
-    <%= f.text_field :budget %>
-  </div>
-  <div class="field">
-    <%= f.label :start_date %><br>
-    <%= f.date_select :start_date, include_blank: true %>
-  </div>
-  <div class="field">
-    <%= f.label :due_date %><br>
-    <%= f.date_select :due_date, include_blank: true %>
-  </div>
-  <div class="field">
-    <%= f.label :status %><br>
-    <%= f.select :status, options_for_select(Task::STATUS_DOMAIN, task.status) %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
