--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,7 +1,8 @@
-<%= form_for(project) do |f| %>
+<%= form_for project do |f| %>
   <% if project.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
+      <h2><%= pluralize(project.errors.count, "error") %> 
+        prohibited this project from being saved:</h2>
 
       <ul>
       <% project.errors.full_messages.each do |msg| %>
@@ -12,14 +13,14 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.label :name, class: "label" %><br>
+    <%= f.text_field :name, class: "input-xxlarge", placeholder: "Enter name" %>
   </div>
   <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.label :description, class: "label" %><br>
+    <%= f.text_area :description, class: "input-xxlarge", placeholder: "Enter description" %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn-primary" %>
   </div>
 <% end %>
