--- a/app/views/tasks/show.slim
+++ b/app/views/tasks/show.slim
@@ -30,12 +30,12 @@ p
   = @task.budget
 
 p
-  strong Start date: 
-  = @task.start_date
+  strong Started on: 
+  = @task.started_on
 
 p
-  strong Due date: 
-  = @task.due_date
+  strong Expired on: 
+  = @task.expired_on
 
 p
   strong Status: 
