--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -2,7 +2,8 @@
 div class="navbar navbar-default navbar-static-top"
   div class="container"
     div class="navbar-header"
-      button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"
+      button type="button" class="navbar-toggle" data-toggle="collapse"
+        data-target=".navbar-collapse"
       = link_to 'TO-DO List', :root, class: "navbar-brand"
     div class="navbar-collapse"
       ul class="nav navbar-nav"
