--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -3,8 +3,7 @@ html lang="en"
   head
     title Todolist
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
-    = javascript_include_tag "application", 'data-turbolinks-track' => true
+    = stylesheet_link_tag    "application", media: "all"
     = csrf_meta_tags
   body
     div class="container"
