--- a/app/views/projects/_form.slim
+++ b/app/views/projects/_form.slim
@@ -17,7 +17,8 @@
   div class="field"
     = f.label :description, class: "label"
     br
-    = f.text_area :description, class: "input-xxlarge", placeholder: "Enter description"
+    = f.text_area :description, class: "input-xxlarge",
+      placeholder: "Enter description"
 
   div class="actions"
     = f.submit class: "btn-primary"
