--- a/app/views/tasks/_form.slim
+++ b/app/views/tasks/_form.slim
@@ -22,18 +22,21 @@ div class="form"
     div class="field"
       = f.label :kind, class: "label"
       br
-      = f.select :kind, options_for_select(Task::KIND_DOMAIN, task.kind), include_blank: true
+      = f.select :kind, options_for_select(Task::KINDS, task.kind),
+        include_blank: true
 
     div class="field"
       = f.label :project, class: "label"
       br
       = f.select :project_id,
-        Project.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'None'}, disabled: :true
+        Project.all.collect {|p| [ p.name, p.id ] }, {include_blank: 'None'},
+          disabled: :true
 
     div class="field"
       = f.label :priority, class: "label"
       br
-      = f.select :priority, options_for_select(Task::PRIORITY_DOMAIN, task.priority)
+      = f.select :priority,
+        options_for_select(Task::PRIORITIES, task.priority)
 
     div class="field"
       = f.label :notes, class: "label"
@@ -46,19 +49,19 @@ div class="form"
       = f.text_field :budget
 
     div class="field"
-      = f.label :start_date, class: "label"
+      = f.label :started_on, class: "label"
       br
-      = f.date_select :start_date, include_blank: true
+      = f.date_select :started_on, include_blank: true
 
     div class="field"
-      = f.label :due_date, class: "label"
+      = f.label :expired_on, class: "label"
       br
-      = f.date_select :due_date, include_blank: true
+      = f.date_select :expired_on, include_blank: true
 
     div class="field"
       = f.label :status, class: "label"
       br
-      = f.select :status, options_for_select(Task::STATUS_DOMAIN, task.status)
+      = f.select :status, options_for_select(Task::STATUSES, task.status)
 
     div class="actions"
       = f.submit class: "btn-primary"
