--- a/app/views/tasks/index.slim
+++ b/app/views/tasks/index.slim
@@ -1,4 +1,4 @@
-h1 = "Listing tasks #{@project.to_s} project"
+h1 = "Listing tasks \"#{@project.name}\" project"
 
 p = link_to 'New Task', new_project_task_path
 
@@ -11,8 +11,8 @@ table class='table'
       th Priority
       th Notes
       th Budget
-      th Start date
-      th Due date
+      th Started on
+      th Expired on
       th Status
       th
       th
@@ -27,14 +27,14 @@ table class='table'
         td = task.priority
         td = !task.notes.empty? ? "#{task.notes[0..30].rstrip}..." : ''
         td = task.budget
-        td = task.start_date
-        td = task.due_date
+        td = task.started_on
+        td = task.expired_on
         td = task.status
         td = button_to 'Show', project_task_path(@project, task),
-          method: :get, class: "btn-success"
+          method: :get, class: "btn-success btn-mini"
         td = button_to 'Edit', edit_project_task_path(@project, task),
-          method: :get, class: "btn-warning"
+          method: :get, class: "btn-warning btn-mini"
         td = button_to 'Destroy', [@project, task], method: :delete,
-          data: { confirm: 'Are you sure?' }, class: "btn-danger"
+          data: { confirm: 'Are you sure?' }, class: "btn-danger btn-mini"
 
 p = link_to 'Back to Projects', projects_path
