--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -12,10 +12,9 @@ table class='table'
       th Kind
       th Priority
       th Notes
-      th Budget
       th Started on
-      th Expired on
-      th Status
+      th Completed on
+      th State
 
   tbody
     - tasks.each do |task|
@@ -27,7 +26,6 @@ table class='table'
         td = task.kind
         td = task.priority
         td = !task.notes.empty? ? "#{task.notes[0..30].rstrip}..." : ''
-        td = task.budget
         td = task.started_on
-        td = task.expired_on
-        td = task.status
+        td = task.completed_on
+        td = task.state
