--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -3,10 +3,11 @@ html lang="en"
   head
     title Todolist
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    = stylesheet_link_tag    "application", media: "all"
+    = stylesheet_link_tag "application", media: "all"
     = csrf_meta_tags
   body
     div class="container"
       == render 'layouts/header'
       div class="main"
         == yield
+    = javascript_include_tag  "application"
