--- a/app/views/tasks/index.slim
+++ b/app/views/tasks/index.slim
@@ -11,9 +11,7 @@ table class='table'
       th Priority
       th Notes
       th Budget
-      th Started on
-      th Expired on
-      th Status
+      th
       th
       th
       th
@@ -27,9 +25,7 @@ table class='table'
         td = task.priority
         td = !task.notes.empty? ? "#{task.notes[0..30].rstrip}..." : ''
         td = task.budget
-        td = task.started_on
-        td = task.expired_on
-        td = task.status
+        td = TasksHelper::StateButtonsView.new(task).render.html_safe
         td = button_to 'Show', project_task_path(@project, task),
           method: :get, class: "btn-success btn-mini"
         td = button_to 'Edit', edit_project_task_path(@project, task),
