--- a/app/views/projects/edit.slim
+++ b/app/views/projects/edit.slim
@@ -1,7 +1,7 @@
 h1 Editing project
 
-== render 'form', project: @project
+== render 'form', project: project
 
-= link_to 'Show', @project
+= link_to 'Show', resource
 = ' | '
-= link_to 'Back', projects_path
+= link_to 'Back', collection_path
