--- a/app/views/tasks/_form.slim
+++ b/app/views/tasks/_form.slim
@@ -1,5 +1,5 @@
 div class="form"
-  = form_for([project, task]) do |f|
+  = form_for([parent, task]) do |f|
     - if task.errors.any?
       div id="error_explanation"
         h2
