--- a/app/views/tasks/new.slim
+++ b/app/views/tasks/new.slim
@@ -1,5 +1,5 @@
-h1 = "New \"#{@project.name}\" project task"
+h1 = "New \"#{parent.name}\" project task"
 
-= render 'form', project: @project, task: @task
+= render 'form', project: parent, task: task
 
 = link_to 'Back', project_tasks_path
