--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -4,11 +4,11 @@ div class="navbar navbar-default navbar-static-top"
     div class="navbar-header"
       button type="button" class="navbar-toggle" data-toggle="collapse"
         data-target=".navbar-collapse"
-      = link_to 'TO-DO List', :root, class: "navbar-brand"
+      = link_to 'TO-DO List', root_path, class: "navbar-brand"
     div class="navbar-collapse"
       ul class="nav navbar-nav"
         li class="active"
-          = link_to 'Home', :root
+          = link_to 'Home', root_path
         li = link_to 'About', "#"
         li = link_to 'Contact', "#"
         li class="dropdown"
