--- a/app/views/projects/show.slim
+++ b/app/views/projects/show.slim
@@ -3,12 +3,12 @@ p id="notice"
 
 p
   strong Name: 
-  = project.name
+  = resource.name
 
 p
   strong Description: 
-  = project.description
+  = resource.description
 
-= link_to 'Edit', edit_project_path(project)
+= link_to 'Edit', edit_project_path(resource)
 = ' | '
 = link_to 'Back', projects_path
