--- a/app/views/tasks/index.slim
+++ b/app/views/tasks/index.slim
@@ -17,7 +17,7 @@ table class='table'
       th
 
   tbody
-    - tasks.each do |task|
+    - collection.each do |task|
       tr
         td = task.name
         td = task.programmer
