--- a/app/views/projects/_form.slim
+++ b/app/views/projects/_form.slim
@@ -4,7 +4,7 @@
     div id="error_explanation"
       h2
         = pluralize(project.errors.count, "error")
-        = ' prohibited this resource from being saved:'
+        = ' prohibited this project from being saved:'
       ul
         - project.errors.full_messages.each do |msg|
           li = msg
