--- a/app/views/devise/registrations/new.slim
+++ b/app/views/devise/registrations/new.slim
@@ -4,28 +4,33 @@ h2 Sign up
     url: registration_path(resource_name) do |f|
   = devise_error_messages!
 
-  = f.fields_for :user_company do |company_form|
+  = f.fields_for :company_attributes do |company_form|
     div class="field"
-      = company_form.label :name, "Company Name"
+      = company_form.label :name, "Company Name", class: "label"
       br
-      = company_form.text_field :name, autofocus: true
+      = company_form.text_field :name, class: "input-xxlarge", autofocus: true
 
-  div
-    = f.label :email
+  div class="field"
+    = f.label :full_name, class: "label"
     br
-    = f.email_field :email
+    = f.text_field :full_name, class: "input-xxlarge"
 
-  div
-    = f.label :password
+  div class="field"
+    = f.label :email, class: "label"
+    br
+    = f.email_field :email, class: "input-xxlarge"
+
+  div class="field"
+    = f.label :password, class: "label"
     br
     = f.password_field :password
 
-  div
-    = f.label :password_confirmation
+  div class="field"
+    = f.label :password_confirmation, class: "label"
     br
     = f.password_field :password_confirmation
 
-  div
-    = f.submit "Sign up"
+  div class="field"
+    = f.submit "Sign up", class: "btn-primary"
 
 = render "devise/shared/links"
