--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -25,4 +25,4 @@ div class="navbar navbar-default navbar-static-top"
         li = link_to 'Default', "#"
         li class="active"
           = link_to 'Static top', "#"
-        li = link_to 'Fixed top', "#"
+        li = link_to 'Sign out', destroy_user_session_path, method: :delete
