--- a/app/views/projects/_form.slim
+++ b/app/views/projects/_form.slim
@@ -12,7 +12,7 @@
   div class="field"
     = f.label :name, class: "label"
     br
-    = f.text_field :name, class: "input-xxlarge", placeholder: "Enter name"
+    = f.text_field :name, class: "input-xxlarge", autofocus: true
 
   div class="field"
     = f.label :description, class: "label"
