--- a/app/views/tasks/_form.slim
+++ b/app/views/tasks/_form.slim
@@ -12,7 +12,7 @@ div class="form"
     div class="field"
       = f.label :name, class: "label"
       br
-      = f.text_field :name, class: "input-xxlarge"
+      = f.text_field :name, class: "input-xxlarge", autofocus: true
 
     div class="field"
       = f.label :programmer, class: "label"
