Issue #11 - r3 - Multi-Tenant Projects module

--- a/app/views/projects/edit.slim
+++ b/app/views/projects/edit.slim
@@ -4,4 +4,4 @@ h1 Editing project
 
 = link_to 'Show', resource
 = ' | '
-= link_to 'Back', projects_path
+= link_to 'Back', company_projects_path(current_user.company)
