--- a/app/views/projects/show.slim
+++ b/app/views/projects/show.slim
@@ -8,4 +8,4 @@ p
 
 = link_to 'Edit', edit_project_path(resource)
 = ' | '
-= link_to 'Back', company_projects_path(current_user.company)
+= link_to 'Back', projects_path
